Add English first two dev docs and revise Chinese version

--- a/English/String entries and frontend API/Developer docs/2. Providing information to users.md
+++ b/English/String entries and frontend API/Developer docs/2. Providing information to users.md
@@ -1,8 +1,8 @@
-# 给用户提供需要的信息
+# Providing necessary information to users
 
-为了能让用户知道应用程序中能自定义的字符串和提示，你的应用程序需要提供文档或描述。每一个条目应该包括路径名称和默认语句。
+To let users know the customizable string entries and messages, your application need to provide description or documentation of them. Each entry should provide the path name and default message.
 
-比如，在应用程序的文档中，可以使用以下格式列出支持的字符串定义和默认语句：
+For example, you can list the following in your documentation:
 
 ```plaintext
 com.example example-app found-file
