--- a/简体中文/字符串定义和应用程序API/应用程序适配/3. 使用frontend模块.md
+++ b/简体中文/字符串定义和应用程序API/应用程序适配/3. 使用frontend模块.md
@@ -1,59 +1,53 @@
-# 使用CLItheme的frontend模块
+# 使用frontend模块
 
-为了帮助开发者更方便的添加CLItheme的适配，本项目提供了一个frontend模块。这个模块包含了抓取当前主题中字符串的功能；只需要调用一个函数就可以了。除此之外，frontend还包括了其他的功能，比如检查当前的主题有没有适配请求的字符串。
+frontend模块包含了抓取当前主题中字符串的功能。除此之外，frontend还包括了其他的功能，比如[使用本地定义文件](调用本地主题定义文件.md)。
 
 > [!NOTE]
->  目前frontend模块只支持使用Python 3编写的应用程序；其他语言编写的程序需要自行访问数据结构。如需更多信息，请见[**路径名称和数据结构**](1.%20路径名称和数据结构.md)。
+> frontend模块仅支持Python 3。其他编程语言的程序需要[直接访问数据结构](1.%20路径名称和数据结构.md)。
 
-## 新建`FetchDescriptor`类
+## `FetchDescriptor` class
 
-frontend模块使用了一个叫`FetchDescriptor`的一个类，并且所有的功能都包含在这个类里面。初始化`FetchDesciptor`时可以提供如开发者，应用名称，和子路径等信息，调用功能时会自动把这些信息添加到提供的路径名称中，帮你减少代码量。
+frontend模块主要使用了`FetchDescriptor` class，包含获取字符串定义的功能。初始化`FetchDesciptor`时可以提供如开发者，应用名称，和子路径等信息，获取定义时会自动把这些信息添加到提供的路径名称中。
 
-如需创建`FetchDescriptor`，请导入frontend模块，并参考以下代码：
+导入frontend模块并创建一个`FetchDescriptor`：
 
 ```py
 from clitheme import frontend
 
-f = frontend.FetchDescriptor( \
-    domain_name="com.example", \
-    app_name="example-app", \
-    subsections="example-subsection subsection-2" \
-    lang="en_US" \ 
-    debug_mode=False, \
+f = frontend.FetchDescriptor(
+    domain_name="com.example",
+    app_name="example-app",
+    subsections="example-subsection subsection-2"
+    lang="en_US" 
+    debug_mode=False,
     disable_lang=False)
 ```
 
 `FetchDescriptor`支持以下参数：
 
-- `domain_name`，`app_name`，`subsections`：指定开发者名称，应用名称，和子路径；调用功能时会自动添加到路径中
-- `lang`：指定并且覆盖CLItheme检测到的系统语言信息（详见[**多语言支持**](../../附录：主题定义文件通用语法/多语言支持.md)），并且使用该参数定义的语言信息（如`zh_CN`，`en_US`，`en_US.UTF-8`等）
+- `domain_name`，`app_name`，`subsections`：这些信息会被自动添加到路径中
+- `lang`：覆盖自动检测到的[系统语言](../../附录：主题定义文件通用语法/多语言支持.md)，并且使用该参数定义的语言信息
     - 你可以指定多个语言；只要用空格分开即可（如`en_US zh_CN`）。获取字符串时会按照顺序依次尝试获取对应语言的字符串定义。
 - `debug_mode`：如果设置为`True`，调用功能时会输出更多信息，用于调试作用
-- `disable_lang`：如果设置为`True`，将会禁用自动语言检测，并且调用功能时将会永远使用当前主题定义中的`default`条目。
+- `disable_lang`：如果设置为`True`，将会禁用自动语言检测，并且调用功能时将会永远使用当前主题定义中的`default`条目
 
-### 创建后修改参数/设置
-
-你可以在创建`FetchDescriptor`后修改这些参数；只需要修改对应的变量就可以了。比如说：
+你可以在创建`FetchDescriptor`后修改这些参数，比如：
 
 ```py
 f.debug_mode=True
 f.disable_lang=True
 ```
 
-## 使用`retrieve_entry_or_fallback`函数
+### `retrieve_entry_or_fallback`函数
 
-如需获取当前主题定义的某个字符串，请使用`FetchDescriptor`中的`retrieve_entry_or_fallback`函数。调用时需要提供路径名称和默认字符串。如果当前主题设定没有适配该字符串，则该函数会返回提供的默认字符串。你可以将这个函数调用包括在一个`print`语句中，以输出返回的结果。
-
-该函数会读取系统上的语言设置（详见[**多语言支持**](../../附录：主题定义文件通用语法/多语言支持.md)），并且会优先返回主题定义中对应语言的字符串。该行为可以在创建`FetchDescriptor`时禁用（详见上面）。
-
-你也可以使用更简短的`reof`函数定义以减少代码量。
-
-> [!NOTE]
->  该函数返回的字符串（除返回`fallback_string`之外）不会包含任何末尾空格。
+如需获取当前主题定义的某个字符串，请使用`retrieve_entry_or_fallback`或`reof`函数，并提供路径名称和默认字符串。如果当前主题设定没有适配该字符串，则该函数会返回提供的默认字符串。在默认情况下，会根据系统语言获取字符串定义，除非设置了`lang`或`disable_lang`。
 
 ```py
-# [对接上方的f=FetchDescriptor(...)定义]
-
+f = frontend.FetchDescriptor(
+    domain_name="com.example",
+    app_name="example-app",
+    subsections="example-subsection subsection-2"
+)
 # 对应com.example example-app example-subsection subsection-2 example-entry
 f.retrieve_entry_or_fallback("example-entry", "Default text goes here")
 
@@ -67,23 +61,21 @@ f2.reof("com.example example-app example-subsection subsection-2 example-entry",
 
 ## 使用`format_entry_or_fallback`函数
 
-如果获取字符串后需要使用`str.format`函数格式化字符串，你可以使用`FetchDescriptor`中的`format_entry_or_fallback`函数。该函数可以自动帮你处理因字符串格式不正确导致的报错，防止格式不正确的字符串定义导致你的应用程序无法正常运行的问题。如果当前主题设定没有适配该字符串或者格式化获取的字符串时出现错误，则该函数会返回提供的默认字符串。
+如果获取字符串后需要使用`str.format`函数格式化字符串，你可以使用`FetchDescriptor`中的`format_entry_or_fallback`函数。该函数可以自动帮你处理因字符串格式不正确导致的报错，防止格式不正确的字符串定义导致错误的问题。如果当前主题设定没有适配该字符串或者格式化获取的字符串时出现错误，则该函数会返回提供的默认字符串。
 
-你也可以使用更简短的`feof`函数定义以减少代码量。
-
-如需使用此函数，请将路径名称，默认字符串，和用于`str.format`的参数提供到函数中。
+请将路径名称，默认字符串，和用于`str.format`的参数提供到函数中。
 
 ```py
 # 默认字符串返回值："program: Current value is 1"
 f.format_entry_or_fallback("example-fmt-entry", "{0}: Current value is {value}", "program", value="1")
 
-# 该函数调用等于以下代码：
+# 该函数调用等于以下代码，但会处理字符串定义的format错误：
 f.retrieve_entry_or_fallback("example-fmt-entry", "{0}: Current value is {value}").format("program", value="1")
 ```
 
 ## 全局定义参数
 
-除了在`FetchDescriptor`中定义这些选项和参数，你可以对程序中所有的`FetchDescriptor`设置默认参数值。以下操作会对**在当前文件中**所有的`FetchDescriptor`生效，除非创建`FetchDescriptor`时明确指定了这些参数。你可以指定`None`为数值来取消设定默认值。
+你可以对程序中所有的`FetchDescriptor`设置默认参数值。以下操作会对**在当前文件中**生效。你可以指定`None`为数值来取消设定默认值。
 
 - `set_domain`，`set_appname`，和`set_subsections`：指定默认的`domain_name`，`app_name`，和`subsections`数值
 - `set_debugmode`：指定默认的`debug_mode`数值
@@ -92,9 +84,9 @@ f.retrieve_entry_or_fallback("example-fmt-entry", "{0}: Current value is {value}
 - `set_disablelang`：指定默认的`disable_lang`数值
 
 > [!NOTE]
->  这些全局定义只会影响之后新建的`FetchDescriptor`；更改或设定这些全局定义不会影响已经创建的`FetchDescriptor`。
+> 设定默认值之前的`FetchDescriptor`不会收到影响。
 
-你也可以修改以下全局变量来设定默认值。该定义会对一个模块中的**所有文件**生效，并且没有通过以上函数进行设定（或取消设定）时会被使用。
+你也可以修改以下全局变量来设定默认值。该定义会对一个模块中的所有文件生效，并且没有通过以上函数进行设定（或取消设定）时会被使用。
 
 - `global_domain`
 - `global_appname`
@@ -109,12 +101,12 @@ from clitheme import frontend
 f0=frontend.FetchDescriptor() # 不会使用定义的全局变量
 
 # 参数默认值设定
-frontend.set_domain("com.example") # 对应domain_name
-frontend.set_appname("example-app") # 对应app_name
-frontend.set_subsections("example-subsection subsection-2") # 对应subsections
-frontend.set_debugmode(False) # 对应debug_mode
-frontend.set_lang("") # 对应lang（留空以使用系统语言）
-frontend.set_disablelang(False) # 对应disable_lang
+frontend.set_domain("com.example")
+frontend.set_appname("example-app")
+frontend.set_subsections("example-subsection subsection-2")
+frontend.set_debugmode(False)
+frontend.set_lang("")
+frontend.set_disablelang(False)
 
 # 会使用定义的默认值
 f1=frontend.FetchDescriptor() 
@@ -124,28 +116,27 @@ f2=frontend.FetchDescriptor()
 f3=frontend.FetchDescriptor(debug_mode=True) 
 
 # 设定以下全局变量并且没有通过函数设定时，会被视为默认值
-# frontend.global_domain=""
-# frontend.global_appname=""
-# frontend.global_subsections=""
-# frontend.global_debugmode=False
-# frontend.global_lang=""
-# frontend.global_disablelang=False
+frontend.global_domain=""
+frontend.global_appname=""
+frontend.global_subsections=""
+frontend.global_debugmode=False
+frontend.global_lang=""
+frontend.global_disablelang=False
 ```
 
 ## 使用fallback模块
 
-你可以在你的项目中内置本项目提供的fallback模块，以便更好的处理CLItheme模块不存在时的情况。该fallback模块包括了frontend模块中的所有定义和功能，并且会永远返回失败时的默认值（fallback）。
+你可以在你的项目中内置本项目提供的fallback模块，以便更好的处理CLItheme模块不存在时的情况。该fallback模块包括了frontend模块中的所有定义，并且会永远返回失败时的默认值（fallback）。
 
 如需使用，请在你的项目文件中导入仓库中的`frontend_fallback.py`文件，并且在你的程序中包括以下代码：
 
 ```py
 try:
     from clitheme import frontend
-except (ModuleNotFoundError, ImportError):
+except:
     import frontend_fallback as frontend
 ```
-本项目提供的fallback文件会随版本更新而更改，所以请定期往你的项目里导入最新的fallback文件以获得最新的功能。
 
 ## 样例
 
-如需关于使用frontend模块的样例，请参考本仓库中的`frontend_demo.py`文件。
+如需参考使用frontend模块的样例，请参考项目仓库中的`frontend-demo`文件夹。
