Add English `Using local definition files` and revise Chinese version

--- a/简体中文/字符串定义和应用程序API/应用程序适配/调用本地主题定义文件.md
+++ b/简体中文/字符串定义和应用程序API/应用程序适配/调用本地主题定义文件.md
@@ -1,43 +1,29 @@
 # 使用本地定义文件
 
-你的应用程序除了可以通过frontend适配这个框架，你的应用程序还可以调用一个本地的定义文件。设定了本地定义文件后，frontend访问字符串时会先尝试访问系统/全局主题设定然后再尝试访问这个本地定义文件中的字符串定义。一般情况下，你应该把本地定义文件放在应用程序中的资源文件内，或者把它的内容放在程序中的一个变量内。
-
-本地定义文件可以用于：
-- 为你的应用程序适配多个语言
-- 包括应用程序中所有所需的的字符串和提示信息，修改起来更简单
+你的应用程序也可以使用一个本地的定义文件。设定了本地定义文件后，当前主题数据中没有一个字符串定义时会尝试本地定义文件中的数据。一般情况下，你应该把本地定义文件放在应用程序中的资源文件或代码文件内。本地定义文件可以用于适配多个显示语言（类似于GNU gettext）和其他类似用途。
 
 ## 设定本地定义
 
-设定本地定义文件可以使用`frontend.set_local_themedef`函数，并且把文件的内容传给这个函数。（**注意：** 不是文件的路径名称，而是文件读取后的内容）
-
-当设定成功时，该函数会返回`True`，否则该函数会返回`False`。
-
-如需设定本地定义文件，你可以在相应的代码文件中添加以下调用：
+设定本地定义文件可以使用`frontend.set_local_themedef`函数，并且把文件的内容传给这个函数。当设定成功时，该函数会返回`True`，否则会返回`False`。
 
 ```py
 from clitheme import frontend
-f=open("<filename>", "r", encoding="utf-8") # <filename>为文件路径
-c=f.read() 
-frontend.set_local_themedef(c)
+filename = #...
+content=open(filename, "r", encoding="utf-8").read()
+frontend.set_local_themedef(content)
 ```
 
-设定完成后会对之后的字符串调用操作生效。获取字符串时，只有当前系统/全局主题设定中没有该字符串定义的情况下才会调用本地文件中的定义。
-
-> [!NOTE]
->  该设定会对同一Python模块/应用程序中的所有代码文件生效，不需要在多个文件中重复调用该函数。
+设定完成后会对同一个Python模块中所有文件的字符串调用操作生效。
 
 ## 同时设定多个本地定义文件
 
-你可以通过`set_local_themedefs`函数同时设定多个本地定义文件。使用时，请通过列表指定多个文件内容。
-
-除此之外，你可以使用`set_local_themedef`函数并设定`overlay`参数。请在每次的函数调用指定这个参数。
+你可以通过`frontend.set_local_themedefs`函数同时设定多个本地定义文件。使用时，请通过列表指定多个文件内容。除此之外，你可以使用`set_local_themedef`函数并设定`overlay=True`参数。
 
 ```py
 from clitheme import frontend
-# 方法1：
+# ...
 frontend.set_local_themedefs([file_content1, file_content2, file_content3])
-# 方法2：
-# 第一个调用不需要指定overlay
+# 也可以使用以下方法：
 frontend.set_local_themedef(file_content1)
 frontend.set_local_themedef(file_content2, overlay=True)
 frontend.set_local_themedef(file_content3, overlay=True)
@@ -48,6 +34,5 @@ frontend.set_local_themedef(file_content3, overlay=True)
 如需取消设定本地定义文件，请使用`frontend.unset_local_themedef`函数。取消设定后，frontend将不会尝试调用本地定义文件中的字符串定义。
 
 ```py
-# ...
 frontend.unset_local_themedef()
 ```
