Fix typo in writing manpage files doc

--- a/English/Custom man pages/1. Writing definition files.md
+++ b/English/Custom man pages/1. Writing definition files.md
@@ -22,7 +22,7 @@ In a theme definition file, Unix man pages are defined in the `manpages` section
 
 ```plaintext
 {manpages}
-    <在这里定义manpage文档>
+    # <Define man pages here>
 {/manpages}
 ```
 
