Add English `Writing entries section` and revise Chinese version

--- a/简体中文/字符串定义和应用程序API/编写定义文件.md
+++ b/简体中文/字符串定义和应用程序API/编写定义文件.md
@@ -1,43 +1,42 @@
 # 编写定义文件：字符串定义
 
-本文章将会介绍如何为你喜爱的应用程序编写[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)和字符串定义，以自定义它们的文本输出。
+本文章将会介绍如何编写[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)中的字符串定义。
 
 ## 编写`header`段落
 
 你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落.md)
 
-## 使用`entries`段落
+## 编写字符串定义
 
 所有的字符串定义会被包括在`entries`段落中。请使用和`header`段落相同的格式定义`entries`段落：
 
-    {entries}
-        <...>
-    {/entries}
+```plaintext
+{entries}
+    # <在这里定义字符串定义>
+{/entries}
+```
 
-### 使用`[entry]`定义
+### 使用`[entry]`段落
 
-要定义一个字符串，请使用`entry`定义，并且包括该字符串的路径名称，如`[entry] com.example example-app text-one`。如需获取路径名称，请参考相关应用程序的帮助信息或文档。
+要定义一个字符串，请使用`entry`段落，并且包括该字符串的[路径名称](./应用程序适配/1.%20路径名称和数据结构.md)，如`[entry] com.example example-app text-one`。
 
-CLItheme的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale[<语言>]: <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
+CLItheme的核心设计理念之一是[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)，所以字符串内容会放在不同的语言定义中，其格式为：`locale[<语言>]: <内容>`。应用程序会根据系统语言设置获取对应语言定义中的内容。
 
-`locale`中的语言必须是系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)）
+语言名称必须是Linux系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)）
 
 你可以同时指定多个系统语言，比如`locale[en_US default]:`。
 
-定义字符串时建议添加`default`语言（也可以使用`default: <字符串>`语法）。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
+定义字符串时建议添加`default`语言定义（也可以使用`default: <内容>`语法）。如果该字符串中的其他语言定义不支持当前的系统语言，会使用`default`语言定义。如果`default`没有被定义，只会在其他的语言定义支持当前系统语言的情况下调用该字符串。
 
-如果你不需要为应用程序添加多语言支持，只定义`default`语言就可以了。
-
-下面将展示一个样例：
+如果你不需要为应用程序添加多语言支持，只定义`default`语言定义就可以了。
 
 ```plaintext
 {entries}
-    # ...
     [entry] com.example example-app text-one
         default: Some text
         locale[en_US]: Some text
         locale[zh_CN]: 一些文本
-        # 你也可以同时指定多个语言，如en_US和default：
+        # 你也可以同时指定多个语言：
         locale[en_US default]: Some text
     [/entry]
 {/entries}
@@ -48,34 +47,30 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
 
 ### 多行文本段落
 
-字符串定义也支持多行文本段落，并且通过`[locale] <语言>`定义。
+字符串定义也支持多行文本段落，并且通过`[locale] <语言>`定义。你可以定义多个由空格分开的语言，省去重复复制粘贴的过程。
 
-你可以定义多个语言，省去重复复制粘贴的过程。多个语言由空格分开。
-
-你也可以使用`[default]`定义来替代`[locale] default`。
+你也可以使用`[default]`语句来定义`default`语言定义。
 
 ```plaintext
 {entries}
-    <...>
     [entry] example-entry
-        # 你可以定义多个语言
-        [locale] en_US C
+        # 你可以指定多个语言：
+        [locale] en_US default
             This is an entry
             Another line like that
             A new line
         [/locale]
-        # 你也可以使用`[default]`定义：
+        # 相当于`[locale] default`：
         [default]
             This is an entry
             Another line like that
             A new line
         [/default]
     [/entry]
-    <...>
 {/entries}
 ```
 
-应用程序调用`example-entry`时会显示：
+应用程序获取`example-entry`时会显示：
 
 ```plaintext
 This is an entry
@@ -87,21 +82,19 @@ A new line
 
 ### 使用`<in_domainapp>`和`<in_subsection>`
 
-你可以使用`<in_domainapp>`和`<in_subsection>`以节省文件中的代码量。被定义时，这个信息会自动被添加在所有的`[entry]`定义前，以`<domain> <app> <subsections> <路径>`的格式处理。
+你可以使用`<in_domainapp>`和`<in_subsection>`以减少[字符串路径](./应用程序适配/1.%20路径名称和数据结构.md)中的重复。被定义时，这个信息会自动被添加在之后定义的字符串的`[entry]`路径前，以`<domain> <app> <subsections> [路径]`的格式处理。
 
-如需了解关于子路径的更多信息，请参考[**路径名称和数据结构**](应用程序适配/1.%20路径名称和数据结构.md)。
-
-`<in_domainapp>`的格式为`<in_domainapp> <domain> <app>`，并且只能指定两个名称。`<in_subsection>`的格式为`<in_subsection> <subsection[s]>`，并且可以有多个subsection。
+`<in_domainapp>`的格式为`<in_domainapp> [domain] [app]`，并且只能指定两个由空格分开的名称。`<in_subsection>`的格式为`<in_subsection> <subsection[s]>`，并且可以有多个subsection。
 
 你可以使用`<unset_domainapp>`和`<unset_subsection>`以取消定义这些信息。
 
-> [!NOTE]
->  使用`<in_domainapp>`和`<unset_domainapp>`时会同时取消定义之前设定的`<in_subsection>`信息。
+> [!IMPORTANT]
+> 使用`<in_domainapp>`和`<unset_domainapp>`时会同时取消定义之前设定的`<in_subsection>`信息。
 
 ```plaintext
 {entries}
     <in_domainapp> com.example example-app
-        # 和 com.example example-app entry-one 相同
+        # 和"com.example example-app entry-one"相同
         [entry] entry-one
             default: Some text
         [/entry]
@@ -124,7 +117,7 @@ A new line
 
 ### 同时指定多个路径名称
 
-在字符串定义内容相同的情况下，你可以为一个字符串定义添加多个路径名称。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。如需使用，请同时指定多个`[entry]`语句，比如：
+在字符串定义内容相同的情况下，你可以为一个字符串定义添加多个路径名称。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。在相邻行上指定多个`[entry]`语句：
 
 ```plaintext
 {entries}
@@ -146,5 +139,5 @@ A new line
 
 如果你编写的字符串在应用程序中无法正常显示或者出现格式错误等问题，请尝试参考一下建议：
 
-- 请保留所有用于`scanf`或`format`等函数的符号，比如`%s`和`{0}`等。一般情况下，这类符号识别起来非常容易。
-- 尽量不要使用向`\n`或`\r`等特殊符号，因为这些符号可能不会被应用程序识别到。
+- 请保留所有用于`scanf`或`format`等函数的符号，比如`%s`和`{0}`等
+- 尽量不要使用向`\n`或`\r`等表达式，因为这些符号不会被自动转换
