Revise locale support doc

--- a/简体中文/附录：主题定义文件通用语法/多语言支持.md
+++ b/简体中文/附录：主题定义文件通用语法/多语言支持.md
@@ -41,14 +41,13 @@ LCID             Name             DisplayName
 
 ## 主题定义文件：为定义和替换规则添加多个语言版本
 
-你可以为一个字符串定义和命令行输出替换规则添加多个语言版本。CLItheme会根据系统语言或者应用程序的语言设定自动选择相应的定义。
+CLItheme的核心设计理念之一是多语言支持，所以字符串和替换规则的内容会放在不同的语言定义中，其格式为：`locale[<语言>]: <内容>`（单行）和`[locale] <语言>`（多行）。对于一个字符串或替换规则，应用程序和`clitheme-exec`会根据系统语言设置使用对应语言定义中的内容。
 
-定义时建议添加`default`语言。如果该定义不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在该定义支持当前系统语言的情况下才会被使用。
+定义字符串时建议添加`default`语言定义（也可以使用`default: <内容>`和`[default]`语法）。如果该字符串或替换规则中的其他语言定义不支持当前的系统语言，会使用`default`语言定义。如果`default`没有被定义，只会在其他的语言定义支持当前系统语言的情况下调用该字符串或替换规则。
 
-> [!TIP]
-> 你可以使用`default:`来替代`locale[default]:`和`[default]`来替代`[locale] default`。
+如果你不需要添加多语言支持，只定义`default`语言定义就可以了。
 
-在多行文本段落段落下，你可以同时定义多个语言，省去重复复制粘贴内容的过程。
+你可以同时指定多个系统语言，比如`locale[en_US default]:`和`[locale] en_US default`。
 
 ```plaintext
 {entries}
