Add English `Content variables` and revise Chinese version

--- a/简体中文/附录：主题定义文件通用语法/内容变量.md
+++ b/简体中文/附录：主题定义文件通用语法/内容变量.md
@@ -1,12 +1,10 @@
 # 内容变量的定义和使用
 
-你可以在主题定义文件中定义和使用**内容变量**，可以帮助你面去重复复制粘贴重复内容，并且可以更轻松的批量更改内容。
+你可以在主题定义文件中定义和使用**内容变量**，可以让修改和使用重复内容更方便。
 
 ## 定义变量
 
-你可以在段落之外或在段落内定义变量。如需定义变量，请使用`setvar[<变量名称>]: <内容>`语法。
-
-你也可以同时指定多个由空格分开的变量名称，如`setvar[var1 var2]:`。
+如需定义变量，请使用`setvar[<变量名称>]: <内容>`语法。你也可以同时指定多个由空格分开的变量名称，如`setvar[var1 var2]:`。
 
 ```plaintext
 {substrules}
@@ -20,16 +18,16 @@ setvar[another_var]: Some variable content
 setvar[var3]: Third variable!
 ```
 
-> [!IMPORTANT]
-> 请注意，变量名称不能包含`(){}[]`中的任一字符，并且不能为`ESC`（因为会和`substesc`功能选项冲突）。
+> [!NOTE]
+> 变量名称不能包含`(){}[]`中的任一字符，并且不能为`ESC`（因为会和`substesc`功能选项冲突）。
 
 ### 全局定义和段落内定义的区别
 
-在全局定义是指在段落外定义的变量。**段落内定义的变量只会在该段落内有效**。结束该段落后，当前的变量定义将会复原成现有的全局定义。该规则也同样适用于给现有的变量改变/重新赋值内容的操作。
+在全局定义是指在段落外定义的变量。**段落内定义的变量只会在该段落内有效，包括对全局变量的修改**。结束该段落后，当前的变量定义将会复原成现有的全局定义。
 
 ## 使用变量
 
-如需使用变量，请先[启用](./可以设定的选项.md#如何设定选项)`substvar`选项（使用`set_options substvar`），然后在内容中使用`{{<变量名称>}}`语法，比如`{{example_var}}`。
+如需使用变量，请先[启用](./可以设定的选项.md#如何设定选项)`substvar`选项，然后在内容中使用`{{<变量名称>}}`语法，比如`{{example_var}}`。
 
 ```plaintext
 setvar[name]: Vim
@@ -45,7 +43,7 @@ setvar[name]: Vim
 {/substrules}
 ```
 
-你也可以在指定**系统语言**和**选项设定**的地方使用内容变量，比如：
+你也可以在指定系统语言和选项设定的地方使用内容变量，比如：
 
 ```plaintext
 {substrules}
@@ -59,7 +57,7 @@ setvar[name]: Vim
         [locale] {{langs}}
             Substitute content
         [/locale]
-    # 将会设定strictcmdmatch和endmatchhere选项
+    # 设定`strictcmdmatch`和`endmatchhere`选项
     [/subst_regex] {{opts}}
 {/substrules}
 ```
@@ -79,11 +77,11 @@ setvar[place2]: version:
 
 > [!NOTE]
 > - 变量名称中不能包含任何空格，否则将不会被处理。比如：`{{var }}`和`{{this and}}`
-> - 变量内容的ESC或字符替换表达式**不会在定义变量时被处理**，即使已启用对应的选项；只会在变量被引用时才会被处理（相当于在内容中直接使用表达式）。
+> - 变量内容的ESC或字符替换表达式**不会在定义变量时被处理**；只有变量在支持的内容中被引用时才会被处理
 
 ## 在变量定义中引用另一个变量的内容
 
-你可以在变量的定义内容中通过上述方法引用另一个变量的内容。前提是：在定义变量之前设定`substvar`选项。样例：
+你可以在变量的定义内容中通过上述方法引用另一个变量的内容。前提是：在定义变量之前设定`substvar`选项。
 
 ```plaintext
 setvar[example_one]: Some text here
