Add English `Multi-line content block` and revise Chinese version

--- a/简体中文/附录：主题定义文件通用语法/多行文本段落.md
+++ b/简体中文/附录：主题定义文件通用语法/多行文本段落.md
@@ -1,18 +1,16 @@
 # 多行文本段落
 
-主题定义文件中的部分定义支持多行文本段落。它允许你在一个定义中包括拥有多个行数的字符串，或允许你定义带有空格的名称和项目。
-
-如需定义多行文本段落段落，请在支持的定义名称中添加`[`和`]`（比如：`[locales]`, `[description]`），并且使用`[/<name>]`结束段落（如`[/locales]`，`[/description]`。
+主题定义文件中的部分定义支持多行文本段落。它允许你在一个定义中包括拥有多个行数的内容，或允许你定义带有空格的名称和项目。
 
 > [!TIP]
-> 如果你想在多行文本段落中输入结束语句（如`[/locale]`等），请在语句前加上`\`符号，如`\[/locale]`等。该语句必须放在一行中的最前面才会被识别并处理，否则前面的`\`符号将不会在最终内容中移除。
+> 如果你想在一行的开始位置输入结束语句（如`[/locale]`等），请在语句前加上`\`符号，如`\[/locale]`等。该语句必须放在一行中的最前面才会被识别并处理，否则前面的`\`符号将不会在最终内容中移除。
 
 ```plaintext
 [default]
     Use 
-    \[/locale]
+    \[/default]
     To end the block
-    Using [/locale]
+    Using [/default]
     will also work
 [/default]
 ```
@@ -22,41 +20,43 @@
 
 ## 关于缩进和边缘空格的处理
 
-多行文本段落中的结尾空格将会被忽略。如需添加末尾空格，请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`linebounds`选项并在一行中使用边界符号（如`|line content    |`）。
+每一行的缩进会被减去多行文本段落内容内的共同空格大小（tab符号将会被视为8个空格）。这意味着只有行数之间的缩进差距将会被保留。如果你想要在所有的行之前都加上缩进，你可以[指定](可以设定的选项.md#如何设定选项)`leadtabs:<n>`或`leadspaces:<n>`选项；前者会添加`<n>`个缩进（Tab）符号，后者会添加`<n>`个空格。
 
-起始空格会被减去多行文本段落内容内的共同空格大小（tab符号将会被视为8个空格）。这意味着只有行数之间的缩进差距将会被保留。如果你想要在所有的行之前都加上一定大小的空格，你可以[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`leadtabs:<n>`或`leadspaces:<n>`选项；前者会添加`<n>`个缩进（Tab）符号，后者会添加`<n>`个空格。
+多行文本段落中的结尾空格将会被忽略。如需添加末尾空格，请[启用](可以设定的选项.md#如何设定选项)`linebounds`选项并在一行中使用边界符号（如`|line content    |`）。
 
 > [!NOTE]
->  在部分列表形式的多行段落中（如`[supported_apps]`、`[filter_cmds]`等）不会保留任何空格，并且不允许指定控制缩进的选项。
+> 在部分列表形式的多行段落中（如`[supported_apps]`、`[filter_cmds]`等）不会保留边缘空格和缩进，并且不允许指定控制缩进的选项。
 
 ### 样例
 
 ```plaintext
-[entry] entry1
-    [default]
-        Text 1
-        Text 2
-            Text 3
-                Text 4
-    [/default]
-[/entry]
-[entry] entry2
-    [default]
-        Text 1
-        Text 2
-            Text 3
-    [/default] leadtabs:1
-[/entry]
-[entry] entry3
-    [default]
-Text 1
-Text 2
-Text 3
-    [/default]
-[/entry]
+{entries}
+    [entry] entry1
+        [default]
+            Text 1
+            Text 2
+                Text 3
+                    Text 4
+        [/default]
+    [/entry]
+    [entry] entry2
+        [default]
+            Text 1
+            Text 2
+                Text 3
+        [/default] leadtabs:1
+    [/entry]
+    [entry] entry3
+        [default]
+    Text 1
+    Text 2
+    Text 3
+        [/default]
+    [/entry]
+{/entries}
 ```
 
-被读取时会返回以下内容：
+对应以下内容：
 
 | `entry1` | `entry2` | `entry3` |
 | --- | --- | --- |
