Add English `Locale support` and revise Chinese version

--- a/简体中文/附录：主题定义文件通用语法/多语言支持.md
+++ b/简体中文/附录：主题定义文件通用语法/多语言支持.md
@@ -1,15 +1,15 @@
 # 多语言支持
 
-CLItheme的核心设计理念之一是对多语言的支持。它可以自动检测当前的系统语言（locale），并且调用对应语言的字符串定义。你可以为一个字符串定义添加不同语言的版本，甚至在主题定义文件内包含你的应用程序中的所有语言的提示信息和字符串。
+CLItheme的核心设计理念之一是对多语言的支持。它可以自动检测当前的系统语言（locale），并且调用对应语言的字符串定义和替换规则。你可以为一个字符串定义或替换规则添加不同语言的版本。
 
 ## 语言名称格式
 
-语言名称必须是系统语言格式，如`zh_CN`和`en_US`。这个名称由两个小写字母的语言名称和两个大写字母的地区名称组成，并且通过一个下划线分开。
+语言名称必须是Linux系统语言格式，如`zh_CN`和`en_US`。这个名称由两个小写字母的语言名称和两个大写字母的地区名称组成，并且通过一个下划线分开。
 
 > [!NOTE]
-> 有时候，语言名称将会带有格式编码后缀，比如`zh_CN.UTF-8`。**不要包括这个后缀**，否则可能不会匹配到对应的定义。
+> 有时候，语言名称将会带有编码后缀，比如`zh_CN.UTF-8`。**不要包括这个后缀**，否则可能不会匹配到对应的定义。
 
-在Linux系统中，你可以在命令行中使用`locale`命令查看当前系统语言。你可以参考输出中的`LANG`和`LANGUAGE`信息作为语言名称。
+在Linux和macOS系统中，你可以在命令行中使用`locale`命令查看当前系统语言。你可以参考输出中的`LANG`和`LANGUAGE`信息作为语言名称。
 
 ```plaintext
 $ locale
@@ -33,15 +33,15 @@ LCID             Name             DisplayName
 ```
 
 > [!TIP]
-> 建议使用带有下划线符号的语言名称；比如，`en-US`需在定义文件中写成`en_US`。
+> 请使用带有下划线符号的语言名称；比如，`en-US`需在定义文件中写成`en_US`。
 
 > [!NOTE]
 > 在新版本的Windows 11上，命令行程序的语言由**语言和区域**设置中位于**Windows显示语言**下的**非Unicode程序的语言**控制，
 > 并需要关闭**使用Unicode UTF-8 提供全球语言支持**选项。
 
-## 主题定义文件：为定义和替换规则添加多个语言版本
+## 为字符串定义和替换规则添加多个语言版本
 
-CLItheme的核心设计理念之一是多语言支持，所以字符串和替换规则的内容会放在不同的语言定义中，其格式为：`locale[<语言>]: <内容>`（单行）和`[locale] <语言>`（多行）。对于一个字符串或替换规则，应用程序和`clitheme-exec`会根据系统语言设置使用对应语言定义中的内容。
+CLItheme的核心设计理念之一是多语言支持，所以字符串和替换规则的内容会放在不同的语言定义中，其格式为：`locale[<语言>]: <内容>`（单行）和`[locale] <语言>`（多行）。对于一个字符串或替换规则，应用程序或`clitheme-exec`会根据系统语言设置使用对应语言定义中的内容。
 
 定义字符串时建议添加`default`语言定义（也可以使用`default: <内容>`和`[default]`语法）。如果该字符串或替换规则中的其他语言定义不支持当前的系统语言，会使用`default`语言定义。如果`default`没有被定义，只会在其他的语言定义支持当前系统语言的情况下调用该字符串或替换规则。
 
@@ -51,7 +51,6 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串和替换
 
 ```plaintext
 {entries}
-    # ...
     [entry] com.example example-app example-entry
         default: Your entry text here
         locale[zh_CN]: 你的定义文本
@@ -65,10 +64,9 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串和替换
     [/entry]
 {/entries}
 {substrules}
-    # ...
     [subst_string] Some example output message
         default: Output message! :)
-        locale[zh_CN]: 输出提示！o(≧v≦)o
+        locale[zh_CN]: 输出提示！:)
         # 同时定义C和en_US语言
         [locale] C en_US
             Output message! :)
@@ -79,9 +77,9 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串和替换
 
 ## frontend模块：设定语言和禁用语言检测
 
-创建`FetchDescriptor`时，你可以指定以下参数：
+创建`FetchDescriptor`时，以下参数可以控制系统语言检测：
 
-- `lang`：指定了抓取字符串时应该使用的语言；该参数会覆盖CLItheme自动检测到的系统语言。
+- `lang`：指定了获取字符串时应该使用的语言；该参数会覆盖自动检测到的系统语言。
     - 你可以指定多个语言；只要用空格分开即可（如`en_US zh_CN`）。获取字符串时会按照顺序依次尝试获取对应语言的字符串定义。
 - `disable_lang`：如果设置为`True`，将会禁用自动语言检测，并且调用功能时将会永远使用当前主题定义中的`default`条目。
 
@@ -92,26 +90,26 @@ from clitheme import frontend
 f=frontend.FetchDescriptor()
 
 # 使用zh_CN语言
-f2=frontend.FetchDescriptor(lang="zh_CN")
+f=frontend.FetchDescriptor(lang="zh_CN")
 
-# 如果抓取的字符串定义不支持en_US，则使用zh_CN
-f3=frontend.FetchDescriptor(lang="en_US zh_CN")
+# 如果抓取的字符串定义不支持en_US，则尝试zh_CN
+f=frontend.FetchDescriptor(lang="en_US zh_CN")
 
 # 永远使用字符串定义的default条目
-f4=frontend.FetchDescriptor(disable_lang=True)
+f=frontend.FetchDescriptor(disable_lang=True)
 ```
 
-## 技术信息：自动语言检测的原理
+## 系统语言检测的原理
 
-CLItheme的自动语言检测的工作方法是读取当前系统中的环境变量信息，并且根据这些信息选择目标语言。
+以下环境变量信息将通过这个顺序被读取以获取系统语言列表。获取字符串定义和替换规则时会按照以下顺序尝试搜索对应的语言定义：
 
-以下环境变量信息将通过这个顺序被读取，并且会选择可用性最优先的环境变量作为目标语言：
-
-- `$LANGUAGE`（多个语言将会被顺序读取，按照该顺序进行字符串定义获取操作）
+- `LANGUAGE`（可以是由`:`分开的语言列表）
     - `en_US`和`en`将会被忽略（详细请见[本文章](https://wiki.archlinuxcn.org/wiki/Locale#LANGUAGE：后备区域设置)）
-    - 如果变量中包含的`C`或`C.<编码>`，CLItheme也会同时处理`en_US`、`en_US.<编码>`、`en`、`en.<编码>`等语言
-    - `$LANG`设定为`C`时，**该变量将不会被读取**
-- `$LC_ALL`
-- `$LANG`
+    - 如果变量中包含的`C`或`C.<编码>`，也会同时处理`en_US`、`en`等语言
+    - `LANG`设定为`C`时，**该变量将不会被读取**
+- `LC_ALL`
+- `LANG`
 
 该顺序参考了GNU gettext的工作原理。详细请见[本文章](https://www.gnu.org/software/gettext/manual/gettext.html#Locale-Environment-Variables)。
+
+除此之外，在Windows系统上会使用`GetSystemDefaultLocaleName`调用的返回结果，对应PowerShell中的`Get-WinSystemLocale`命令。原始语言名称和转换成下划线后的名称（如`en-US`为`en_US`）会被添加在列表的结尾。
