--- a/English/String entries and frontend API/Developer docs/3. Using the frontend module.md
+++ b/English/String entries and frontend API/Developer docs/3. Using the frontend module.md
@@ -59,7 +59,7 @@ f2=frontend.FetchDescriptor()
 f2.reof("com.example example-app example-subsection subsection-2 example-entry", "Default text goes here")
 ```
 
-## 使用`format_entry_or_fallback`函数
+## `format_entry_or_fallback` function
 
 If the string needs to be formatted with `str.format`, you can use `format_entry_or_fallback` or `feof` function. It will handle formatting exceptions due to a malformed string entry to avoid errors. If the string entry is not found or a formatting error occurs, the fallback string is used.
 
@@ -73,7 +73,7 @@ f.format_entry_or_fallback("example-fmt-entry", "{0}: Current value is {value}",
 f.reof("example-fmt-entry", "{0}: Current value is {value}").format("program", value="1")
 ```
 
-## 全局定义参数
+## Setting arguments globally
 
 You can set default argument values for all `FetchDescriptor` instances. The following functions only persists settings **in this file only**. You can use `None` to unset default values.
 
