Add English `Available options` and revise Chinese version

--- a/简体中文/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/简体中文/附录：主题定义文件通用语法/可以设定的选项.md
@@ -4,25 +4,25 @@
 
 ## 如何设定选项
 
-你可以使用`(set_options) <选项>`语法来设定全局选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在之后的所有相关定义。比如：`(set_options) substesc substvar leadtabs:1`
+你可以使用`(set_options) <选项>`语法来设定全局选项。你可以同时指定多个选项设定；只需要使用空格分开即可，比如：`(set_options) substesc substvar leadtabs:1`。设定后，这些选项将会被应用在之后的所有相关定义。
 
-你也可以对单个段落设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`(set_options)`设定的选项设置。比如说：`[/subst_regex] subststdoutonly endmatchhere`或`[/locale] substesc substvar leadtabs:1`
+你也可以对单个段落设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。比如说：`[/subst_regex] endmatchhere`或`[/default] substesc substvar leadtabs:1`
 
 如需对单行定义设定选项，请启用并使用行边界功能（`linebounds`选项），并在其结尾添加选项设定。比如：`default: |Content {{var}}| substvar`
 
 ```plaintext
 {substrules}
     setvar[tot]: (ToT)/~~~
-    # substesc和endmatchhere选项会对以下所有的替换规则生效
+    # `substesc`和`endmatchhere`选项会对以下所有的替换规则生效
     (set_options) endmatchhere substesc
     [subst_string] Some other text {{ESC}}
         [default]
             Another good stuff {{tot}}
         [/default] substvar
+    # 为该定义禁用endmatchhere并启用foregroundonly
     [/subst_string] noendmatchhere foregroundonly
-    # 上方定义的noendmatchhere会覆盖之前在(set_options)中定义的endmatchhere
     (set_options) linebounds
-    # 如果想对以下内容设定选项，需要使用行边界
+    # 如果想对单行内容设定选项，需要使用行边界
     <filter_cmd> |example-app| strictcmdmatch
     [subst_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
         # 对以下内容启用`substvar`选项
@@ -40,12 +40,12 @@
 
 ### 多行文本段落缩进/空格设定
 
-以下几个设定适用于多行文本段落（`header`段落仅支持`[description]`段落）：
+以下几个设定适用于多行文本段落（列表内容除外）：
 
-以下设定中的`<n>`应该输入一个整数数字，并且选项名称与数值之间不能有空格。比如：`leadspaces:4`
+- `leadtabindents:<n>`：在每一行的开始添加`<n>`个tab缩进
+- `leadspaces:<n>`：在每一行的开始添加`<n>`个空格
 
-- `leadtabindents:<n>`：多行文本段落中为每一行的开始添加`<n>`个tab缩进
-- `leadspaces:<n>`：多行文本段落中为每一行的开始添加`<n>`个空格
+`<n>`应该输入一个整数数字，并且选项名称与数值之间不能有空格。
 
 #### 样例：
 
@@ -69,12 +69,12 @@
 
 ### 内容替换
 
-以下选项适用于定义文件中的大多数文本内容和多行文本段落。以下选项中可以使用`no<选项名称>`禁用该选项设定，比如`nosubstesc`。
+以下选项适用于定义文件中的大多数文本内容和多行文本段落。以下选项中可以使用`no<选项名称>`禁用该选项设定，比如`nosubstvar`。
 
-- `substvar`：将内容中的变量名称引用替换成变量内容（详见[内容变量](./内容变量.md)）
-- `linebounds`：支持在部分内容中指定行边界，以在开端和末尾中插入空格。如需使用，请启用该选项并在对应的内容的开头和末尾添加`|`字符。
+- `substvar`：将内容中的变量名称引用替换成变量内容（详见[内容变量](内容变量.md)）
+- `linebounds`：支持在内容首末指定行边界字符`|`，以在开端和末尾中插入空格
     - 该选项启用后，所有以`|`字符开头的内容必须在末尾插入相同字符，否则会提示语法错误
-    - **部分地方（如`[entry]`和`<in_subsection>`后的路径、文件路径、语言定义等）即使使用行边界，依然不会保留首末空格**
+    - **部分地方（如路径名称等）即使使用行边界，依然不会保留首末空格**
 
 ```plaintext
 (set_options) linebounds
@@ -91,11 +91,12 @@
 
 以下选项仅适用于`substrules`段落中的匹配和替换内容、`entries`中的字符串定义内容、和`manpages`中的文件内容：
 
-- `substesc`：将内容中的`{{ESC}}`替换为终端ESC（ASCII Escape）字符（`\x1b`）
-- `substchar`：使用字符编码输入特殊字符；支持`{{[xXX]}}`、`{{[uXXXX]}}`、和`{{[UXXXXXXXX]}}`格式（和Python字符串相似）
+- `substesc`：将内容中的`{{ESC}}`替换为ASCII Escape字符（`0x1B`）
+- `substchar`：使用16进制数值输入特殊字符；支持`{{[xXX]}}`、`{{[uXXXX]}}`、和`{{[UXXXXXXXX]}}`格式（和Python字符串相似）
 
 > [!TIP]
-> 你可以使用`(enable_subst)`语句一键启用以上所有的内容替换选项，并可以使用`(disable_subst)`语句一键禁用。
+> 你可以使用`(enable_subst)`语句一键启用以上所有的内容替换选项，并可以使用`(disable_subst)`语句一键禁用：
+>
 > ```plaintext
 > # 相当于`(set_options) substvar substesc substchar linebounds`
 > (enable_subst)
@@ -104,41 +105,46 @@
 > (disable_subst)
 > ```
 
-### 命令行输出替换
+### 替换规则
 
 以下几个选项仅适用于`[subst_string]`和`[subst_regex]`段落：
+
 - ~~`subststdoutonly`：仅匹配standard output的输出内容~~
 - ~~`subststderronly`：仅匹配standard error的输出内容~~
 - ~~`substallstreams`：**默认设定；用于重置之前设定**；匹配所有内容~~
-- `nlmatchcurpos`：在包含多行匹配内容的替换规则中，内容中的换行也会匹配输出中的指针位置控制序列（如`\x1b[5;1H`）
+- `nlmatchcurpos`：在包含多行匹配内容的替换规则中，其内容中的换行也会匹配输出中的指针位置控制序列（如`\x1b[5;1H`）
     - 该选项不会对匹配内容中如`\n`等正则表达式和`{{[x0a]}}`等字符替换生效
     - **替换的输出内容仍然会使用换行符**，所以请确保匹配的内容仅使用该序列换行，而不是调整到其他的位置
 - `endmatchhere`：如果替换规则与当前输出内容成功匹配时，不会在对应的行数上应用文件中剩余的替换规则
     - 使用`noendmatchhere`取消设定
-    - 对于剩余的多行替换规则，会检查其对应的行数是否涉及之前带有`endmatchhere`的替换
-- `foregroundonly`（**仅在Unix系统上有效**）：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
+- `foregroundonly`（**仅在Unix系统上有效**）：仅在进程为前台运行时应用这些替换规则。大多数shell执行其他命令时，该shell会切换为后台运行。这个选项可以防止通过`clitheme-exec`运行shell时出现输出误替换的问题。
     - 使用`noforegroundonly`取消设定
     - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
     - 你也可以在命令限制条件中指定该选项（如`[/filter_cmds] foregroundonly`），以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
-    - **注意：** 经测试，只有shell等应用程序会在执行其他命令时修改自己的前台状态；`sudo`等程序不会（除非通过`sudo`执行shell，如`sudo bash`）。
-    - **注意：** 大多数shell程序（`bash`、`zsh`、`csh`）的命令执行错误提示（如`command not found`、`permission denied`等）会通过创建的另一个进程输出，并且shell会在后台运行。这会导致带有该选项的命令限制规则和对应的替换规则在这些提示输出上不会被应用：
 
-```plaintext
-$ clitheme-exec --foreground-stat bash
-bash-3.2$ wef
-! Foreground: False
-bash: wef: command not found
-! Foreground: True
-bash-3.2$
-```
+> [!NOTE]
+> - 大多数shell程序在执行内置命令（builtins）时不会改变前台状态
+> - 部分shell程序，如`bash`、`zsh`、`csh`，输出执行错误时（如`command not found`和`permission denied`）会改变自己的前台状态：
+> 
+> ```plaintext
+> $ clitheme-exec --foreground-stat bash
+> bash-3.2$ wef
+> ! Foreground: False
+> bash: wef: command not found
+> ! Foreground: True
+> bash-3.2$
+> ```
 
 ### 命令限制规则
 
-以下几个选项仅适用于`<filter_cmd>`或`[filter_cmds]`段落：
-- `strictcmdmatch`：用户输入的命令内容必须匹配命令匹配条件的开始（和默认的匹配参数不同）；比如说用户输入的`command --get-operation thing`在这个模式下会匹配到`command --get-operation thing --another`，但是不会匹配到`command --another thing --get-operation`
-- `exactcmdmatch`：用户输入的命令必须与匹配条件完全相同；比如说用户输入的`command --get-operations --strict`会匹配到`command --get-operations --strict`，但是不会匹配到`command --get-operations`
-    - 带有此选项的命令匹配条件拥有最高的替换规则执行优先级
-- `smartcmdmatch`：处理命令匹配条件时，把一个`-`开头的命令选项拆分成单个选项（e.g. `-rfc`处理时会被视为`-r -f -c`）；比如说用户输入的`rm -rf folder`会匹配到`rm -r`和`rm -f`，并且用户输入的`rm -r -f folder`会匹配到`rm -rf`。
+以下几个选项仅适用于`<filter_cmd>`和`[filter_cmds]`：
+
+- `strictcmdmatch`：用户输入的命令内容必须匹配命令匹配条件的开始
+    - 比如，用户输入的`command --get thing`在这个模式下会匹配到`command --get thing --another`，但是不会匹配到`command --another thing --get`
+- `exactcmdmatch`：用户输入的命令必须与匹配条件完全相同
+- `smartcmdmatch`：把一个`-`开头的命令选项拆分成单个选项（e.g. `-rfc`处理时会被视为`-r -f -c`）
+    - 比如，用户输入的`rm -rf folder`会匹配到`rm -r`和`rm -f`，并且用户输入的`rm -r -f folder`会匹配到`rm -rf`
     - 单个`-`之后的字符（无论字母和数字）都会被这样处理
-    - 起始与多个横杠的语句（`--`）将不会被这样处理
-- `normalcmdmatch`：**默认设定；用于重置之前设定**；用户输入的命令中的语句需要包含匹配条件中的语句（e.g. `example-app --this --that`会匹配`example-app --that`匹配条件）
+    - 多个横杠开头的语句（`--`）将不会被这样处理
+- `normalcmdmatch`：**默认设定；用于重置之前设定**；用户输入的命令中的语句需要包含匹配条件中的语句
+    - 比如，`example-app --this --that`会匹配`example-app --that`
