Remove mark references in links

--- a/English/CLI output substitution/1. Writing definition files.md
+++ b/English/CLI output substitution/1. Writing definition files.md
@@ -85,8 +85,8 @@ This is the syntax for defining substitution rules:
 ---
 
 - **If the output contains any terminal control sequences, they must be included in the match expression.** You can use the `clitheme-exec --showchars` command to see these control characters in green color. (see [Using clitheme-exec](2.%20Using%20clitheme-exec.md) for more information)
-    - To use the ANSI Escape character (`{{ESC}}`), please [enable](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md#How%20to%20set%20options) the `substesc` option and use `{{ESC}}` in content
-    - To use other characters like `\x08` or `\x07`, please [enable](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md#How%20to%20set%20options) the `substchar` option and use phrases like `{{[x08]}}` in content
+    - To use the ANSI Escape character (`{{ESC}}`), please [enable](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) the `substesc` option and use `{{ESC}}` in content
+    - To use other characters like `\x08` or `\x07`, please [enable](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) the `substchar` option and use phrases like `{{[x08]}}` in content
 
 > [!TIP]
 > Please see [Available options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) for more options and features like content variables, matching cursor position sequences with newlines, matching only if process is foreground.
@@ -211,7 +211,7 @@ By default, if the first phrase of the command matches and the command includes 
 
 For example, the command `rm something -rf` will match the command filter `rm -rf`, but will not match `something -rf rm` (different first phrase) and `rm -f` (command doesn't include `-f`)
 
-You can choose [other matching mechanisms](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md#Command%20filters) by [setting options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md#How%20to%20set%20options) for command filters, such as:
+You can choose [other matching mechanisms](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) by [setting options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) for command filters, such as:
 
 ```plaintext
 [filter_cmds]
