--- a/简体中文/附录：主题定义文件通用语法/内容变量.md
+++ b/简体中文/附录：主题定义文件通用语法/内容变量.md
@@ -27,7 +27,7 @@ setvar[var3]: Third variable!
 
 ## 使用变量
 
-如需使用变量，请先[启用](./可以设定的选项.md#如何设定选项)`substvar`选项，然后在内容中使用`{{<变量名称>}}`语法，比如`{{example_var}}`。
+如需使用变量，请先[启用](./可以设定的选项.md)`substvar`选项，然后在内容中使用`{{<变量名称>}}`语法，比如`{{example_var}}`。
 
 ```plaintext
 setvar[name]: Vim
